Removed stray solid tile

--- a/data/level/Cave/blind-alley.cfg
+++ b/data/level/Cave/blind-alley.cfg
@@ -1990,7 +1990,7 @@
 			},
 			"type": "brazier_temporary",
 			"x": 7130,
-			"y": 194,
+			"y": 194
 		},
 		{
 			"_uuid": "b424284a45a4491da5d4f6b5d331dd74",
@@ -2135,14 +2135,61 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,n
 			"zorder": "exterior_background_tiles"
 		},
 		{
-			"tiles": "",
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "player"
+			"zorder": "wooden_bridge_tile_rear_parts"
 		},
 		{
 			"tiles": ",
@@ -2324,7 +2371,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,n
 ,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
@@ -2461,6 +2508,291 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,n
 		{
 			"tiles": ",
 ,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "interior_decor"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "shadows"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "near_player_foreground_effects"
+		},
+		{
+			"tiles": ",
+,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,spk,spk,spk,spk,spk,spk,spk,spk,spk,spk,spk,spk,spk,spk,spk,spk,spk
 ,
 ,
@@ -2489,6 +2821,234 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,n
 			"y": -544,
 			"y_speed": 100,
 			"zorder": "spikes_foreground"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "foreground_parallax_objects"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "shadow_overlay"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": 5000
 		}
 	],
 	"title": "Blind Alley",
