Made super ability icon only show for currently selected ability

--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -158,14 +158,14 @@
 				where is_this_ability_enabled = def(int ability_index) -> bool player.should_make_hud_graphic_look_enabled_for_this_item(item_info(ability_index).id)
 				where item_info = def(int offset) -> class inventory_item
 				(
-					player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, item_category) )
-
-					where item_category = if(not player.is_super_attack_completely_viable_besides_mana_and_cooldowns,
-						if(not player.underwater,
+					player.item_info( given_item )
+					where given_item = player.nth_item_away_from_current_item_of_category(normalized_index, item_category)
+					where item_category = if(player.is_super_attack_completely_viable_besides_mana_and_cooldowns and normalized_index = 0,
+						enum super_ability,
+						if(player.underwater,
+							enum underwater_ability,
 							enum primary_ability,
-							enum underwater_ability
-						),					
-						enum super_ability
+						),						
 					)
 
 					/*
