Fixed a crasher happening because the copy constructor for padlock_keys wasn't preserving the color across constructions.

--- a/data/objects/props-interactive/locks/padlock_key.cfg
+++ b/data/objects/props-interactive/locks/padlock_key.cfg
@@ -30,13 +30,15 @@ properties: {
 	taxonomy: "TaxonomyType :: enum neutral",
 	team: "'neutral'", //<- will collide with stuff on other teams, shouldn't do damage.  Can currently kill opponents if they're thrown into it.
 	
-	color: { type: "string", dynamic_initialization: true, editor_info: { type: "enum", value:"'gold'", enum_values: ["gold", "silver", "green", "red", "purple", "blue", "cyan"] } },
-	event_name: { type: "string", default: "", editor_info: { type: "text" } },
-	
-	valid_levels: { type: "[string]", default: [] },
 		
-	set_to_animation: "def(string name) -> commands set(animation, { image: 'props/keys.png', accel_y: 80, body_area: 'all', duration: -1, id: name,
-		rect: image_rect_for_color[color] })",
+	set_to_animation: "def(string name) -> commands set(animation, {
+		image: 'props/keys.png',
+		accel_y: 80,
+		body_area: 'all',
+		duration: -1,
+		id: name,
+		rect: image_rect_for_color[color]
+	})",
 		
 	image_rect_for_color: "{string->[int,int,int,int]} :: {
 								'gold':			[0,0,15,15],
@@ -65,17 +67,30 @@ properties: {
 		{
 			original_level: 	source_object.original_level,
 			original_position:	source_object.original_position,
-			original_label:		source_object.original_label
+			original_label:		source_object.original_label,
+			color:				source_object.color,
+			event_name:			source_object.event_name,
+			valid_levels:		source_object.valid_levels,
 		} asserting source_object is obj padlock_key	
 	",
 	
+
+#-------------------------- state values --------------------------#
+	color: { type: "string", dynamic_initialization: true, editor_info: { type: "enum", value:"'gold'", enum_values: ["gold", "silver", "green", "red", "purple", "blue", "cyan"] } },
+	event_name: { type: "string", default: "", editor_info: { type: "text" } },
 	
-#-------------------------- respawn tracking --------------------------#
+	valid_levels: { type: "[string]", default: [] },
+
+
+		#--- for respawn tracking ---#
 	original_position: { type: "{ x: int, y: int }", init: "{ x: me.x, y: me.y }" },
 	original_level: { type: "string", init: "level.id" },
 	original_label: { type: "string", init: "label" },
 	number_of_cycles_we_have_been_underwater: { type: "int", init: "0" },
 	observer: { type: "obj invisible_observer|null", default: null },
+
+	
+#-------------------------- respawn tracking --------------------------#
 	
 	on_original_level: "bool :: level.id = original_level",
 
