Changed inventory panes to use q/w for switching panes instead of w/e

--- a/data/objects/gui-components/inventory-screen/inventory_screen_controller_2.cfg
+++ b/data/objects/gui-components/inventory-screen/inventory_screen_controller_2.cfg
@@ -135,15 +135,14 @@ properties: {
 		'i',
 		',',
 		'.',
+		'q',
 		'w',
-		'e',
 		'Right',
 		'Left',
 		'Up',
 		'Down',
 		' ',
 		';',
-		'q',
 		'a',
 		's'
 	]",
@@ -152,8 +151,8 @@ properties: {
 		'i'			: enum close,
 		','			: enum pane_left,
 		'.'			: enum pane_right,
-		'w'			: enum pane_left,
-		'e' 		: enum pane_right,
+		'q'			: enum pane_left,
+		'w' 		: enum pane_right,
 		'Right'		: enum arrow_right,
 		'Left'		: enum arrow_left,
 		'Up'		: enum arrow_up,
@@ -163,7 +162,6 @@ properties: {
 			//really, here, we're going through all possible input buttons, whether they're jump/attack/whatever, as well as some common 'confirm' triggers like space.  All of these will basically do the same thing.
 		' '			: enum trigger_1,
 		';'			: enum trigger_1, //DDR's keyboard setting for 'jump'. Ideally, this'd be a query.
-		'q'			: enum trigger_1,
 		'a'			: enum trigger_1, //Default keyboard setting for 'jump'.
 		's'			: enum trigger_1,		
 	}[value])",
