Added a world-map node right before the mushroom boss.

--- a/data/level/Forest/the-empty-place.cfg
+++ b/data/level/Forest/the-empty-place.cfg
@@ -428,6 +428,15 @@
 			"type": "forest_cave_side_doorway",
 			"x": -832,
 			"y": 320
+		},
+		{
+			"_uuid": "02f52c3851504caa96cd2d43a166a8aa",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "world_map_pedestal",
+			"type": "world_map_pedestal",
+			"x": 624,
+			"y": 480
 		}
 	],
 	"dimensions": [-960,-1248,3871,1439],
