A series of changes aimed at balancing the mushroom boss so it's not excessively difficult.  Bombardier mushrooms are far more predictable (don't randomly turn on landing).  The ramps have a bit more even dimensions, and they're set up to actually use the lowest ramps, now.  Bombardier mushrooms are flagged as always active.  The mushroom boss has moderately less hitpoints.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -301,7 +301,7 @@ properties: {
 		#-------------------------- constructor/destructor logic --------------------------#
 			epihittable_obj_constructor: "commands :: [
 				if(level.player.get_stored_event('mushroom_boss_fight_won'), remove_object(me)),
-				set_max_hitpoints({casual: standard_thrown_damage * 3 * 8, challenging: standard_thrown_damage * 3 * 13}),
+				set_max_hitpoints({casual: standard_thrown_damage * 3 * 6, challenging: standard_thrown_damage * 3 * 10}),
 			]",
 
 
@@ -319,6 +319,7 @@ properties: {
 									}",
 
 			is_a_physical_gameplay_object: "false",
+			has_mini_hp_bar: "bool :: false",
 
 			hurt_velocity_y: 0,
 			hurt_velocity_x: 0,
