--- a/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
@@ -4,6 +4,7 @@ prototype: ["ant"],
 editor_info: {
 	category: "enemies, forest",
 },
+always_active: true,
 
 solid_area: [18,25,44,52],
 
@@ -17,10 +18,11 @@ properties: {
 	
 	physical_size: "32",
 	turns_at_cliffs: "false",
+	attack_damage: "0",
 
 
 #-------------------------- movable_enemy overrides --------------------------#
-	do_after_landing: "def(decimal velocity) -> commands try_facing( if(1d2=2, 1, -1) )",
+//	do_after_landing: "def(decimal velocity) -> commands try_facing( if(1d2=2, 1, -1) )",
 	
 #-------------------------- vars --------------------------#
 	attack_counter: { type: "int", default: 0 },
