--- a/data/level/Dungeon/platform-peril.cfg
+++ b/data/level/Dungeon/platform-peril.cfg
@@ -462,7 +462,7 @@
 					[3088,1040],
 					[3088,704]
 				],
-				"_end_behavior": "fall",
+				"_end_behavior": "reverse",
 				"_is_moving": false,
 				"_move_speed": 1.0,
 				"_move_when_stood_on": true
@@ -1799,6 +1799,21 @@
 			"type": "light_controller",
 			"x": 4320,
 			"y": 32
+		},
+		{
+			"_uuid": "3274650017e74347b7b27421a2ee1941",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_122beff2",
+			"property_data": {
+				"_x2_bound": 3136,
+				"_x_bound": 3040,
+				"_y2_bound": 1120,
+				"_y_bound": 1056
+			},
+			"type": "save_statue",
+			"x": 3058,
+			"y": 1068
 		}
 	],
 	"dimensions": [1888,-2112,6623,1727],
