--- a/data/level/Forest/the-empty-place.cfg
+++ b/data/level/Forest/the-empty-place.cfg
@@ -437,6 +437,21 @@
 			"type": "world_map_pedestal",
 			"x": 624,
 			"y": 480
+		},
+		{
+			"_uuid": "601bfee3501f4018b327023adb8107d2",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_67dc73b5",
+			"property_data": {
+				"_x2_bound": 3327,
+				"_x_bound": 3227,
+				"_y2_bound": 586,
+				"_y_bound": 286
+			},
+			"type": "save_statue",
+			"x": 3247,
+			"y": 456
 		}
 	],
 	"dimensions": [-960,-1248,3871,1439],
@@ -449,24 +464,6 @@
 	"segment_width": 0,
 	"serialized_objects": {
 		"character": [
-			{
-				"_uuid": "44015e13b49d4d70a41ec92fa89713d8",
-				"activation_area": [2286,444,2609,895],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"label": "_5467",
-				"particles": "bubbles,fizz",
-				"property_data": {
-					"_x2_bound": 2560,
-					"_x_bound": 2336,
-					"_y2_bound": 896,
-					"_y_bound": 544
-				},
-				"type": "acid_controller",
-				"x": 2336,
-				"y": 672
-			},
 			{
 				"_uuid": "816e7decc31a4726baf50c6403f33828",
 				"activation_area": [2302,716,4305,1215],
@@ -484,6 +481,24 @@
 				"type": "acid_controller",
 				"x": 3296,
 				"y": 960
+			},
+			{
+				"_uuid": "44015e13b49d4d70a41ec92fa89713d8",
+				"activation_area": [2286,444,2609,895],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_5467",
+				"particles": "bubbles,fizz",
+				"property_data": {
+					"_x2_bound": 2560,
+					"_x_bound": 2336,
+					"_y2_bound": 896,
+					"_y_bound": 544
+				},
+				"type": "acid_controller",
+				"x": 2336,
+				"y": 672
 			}
 		]
 	},
