--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -368,7 +368,7 @@ properties: {
 		;hax_gazer
 	
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_creature_field_guide, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 5),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
@@ -386,7 +386,7 @@ properties: {
 
 
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_creature_field_guide, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
@@ -401,7 +401,7 @@ properties: {
 
 
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_creature_field_guide, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
@@ -452,7 +452,7 @@ properties: {
 		;set_item_amount(enum item_tongue_extension, 2),
 		;set_item_amount(enum item_greater_mana_talisman, 1),
 		;set_item_amount(enum item_lesser_mana_talisman, 1),
-		;set_item_amount(enum item_creature_field_guide, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_magic_map, 1),
 		;add_item(enum item_acquirable_attractor, 1),
 
