Temporarily removing the bestiary, as it appears to have an ugly crasher (amongst several nasty cosmetic issues) that's not worth fixing before v4.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -373,7 +373,7 @@ properties: {
 		;hax_gazer
 	
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_creature_field_guide, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 5),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
@@ -392,7 +392,7 @@ properties: {
         ;add(levels_visited, ['ravenish-ravine.cfg', 'shady-shortcut.cfg']), //we assume you passed by/found Shady Shortcut
         
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_creature_field_guide, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
@@ -408,7 +408,7 @@ properties: {
         ;add(levels_visited, ['the-empty-place.cfg', 'shady-shortcut.cfg']), //we assume you passed by/found Shady Shortcut
         
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_creature_field_guide, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
@@ -460,7 +460,7 @@ properties: {
 		;set_item_amount(enum item_tongue_extension, 2),
 		;set_item_amount(enum item_greater_mana_talisman, 1),
 		;set_item_amount(enum item_lesser_mana_talisman, 1),
-		;set_item_amount(enum item_creature_field_guide, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_magic_map, 1),
 		;add_item(enum item_acquirable_attractor, 1),
 
