Adding a clear test case for moth bomber bombs overlapping other bombs being spawned.

--- a/data/level/Unused/Test/test.cfg
+++ b/data/level/Unused/Test/test.cfg
@@ -4,26 +4,7 @@
 	"background": "arcade",
 	"background_offset": [0,0],
 	"background_palette": "seaside_sunny",
-	"next_level": "test2.cfg",
-	"previous_level": "test2.cfg",
 	"character": [
-		{
-			"_uuid": "d6c5f74a141647028672f1503f28b494",
-			"current_frame": "stand",
-			"custom": true,
-			"is_human": true,
-			"label": "_73d2d87a",
-			"objects_destroyed": {
-				"level": "test.cfg",
-				"objects": []
-			},
-			"property_data": {
-				"original_level_we_spawned_on": "test.cfg"
-			},
-			"type": "frogatto_playable",
-			"x": 4128,
-			"y": -160
-		},
 		{
 			"_uuid": "33d4e962353c4dffadf1b91069297859",
 			"activation_area": [3358,-788,3707,-439],
@@ -39,13 +20,179 @@
 			"type": "water_controller",
 			"x": 3584,
 			"y": -544
+		},
+		{
+			"_uuid": "a0fdb94e1ab34fa9b5998295293422da",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6c8aac95",
+			"type": "seaside_house_2",
+			"x": 2976,
+			"y": -1568
+		},
+		{
+			"_uuid": "1e001d81405d47af9543eccbcc5bd173",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_9e1b419",
+			"type": "seaside_house_2",
+			"x": 2432,
+			"y": -1568
+		},
+		{
+			"_uuid": "afbd6b9b667d4e8191e984869e73ce85",
+			"current_frame": "stand",
+			"custom": true,
+			"is_human": true,
+			"label": "_5e2b0333",
+			"objects_destroyed": {
+				"level": "test.cfg",
+				"objects": []
+			},
+			"property_data": {
+				"original_level_we_spawned_on": "test.cfg"
+			},
+			"type": "frogatto_playable",
+			"x": 1840,
+			"y": -158
+		},
+		{
+			"_uuid": "50f593e5f7094fedad069a1a2baf184f",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5a9aa418",
+			"type": "coconut_throwable_respawning",
+			"x": 1904,
+			"y": -240
+		},
+		{
+			"_uuid": "3fddae15157b46cc87fa0fcc36e1e486",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_296c1a38",
+			"type": "coconut_throwable_respawning",
+			"x": 1776,
+			"y": -304
+		},
+		{
+			"_uuid": "e861c890e9d3407ca070e6de4be3dffc",
+			"activation_area": [1054,-52,1403,297],
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7ce67bef",
+			"property_data": {
+				"_x2_bound": 1888,
+				"_x_bound": 1104,
+				"_y2_bound": 384,
+				"_y_bound": 128
+			},
+			"type": "water_controller",
+			"x": 1201,
+			"y": 145
+		},
+		{
+			"_uuid": "6f23fe45ee0044798aaae2e32351db56",
+			"current_frame": "hurt",
+			"custom": true,
+			"label": "_371a586b",
+			"property_data": {
+				"_desired_height": 121,
+				"_x2_bound": 1785,
+				"_x_bound": 1385,
+				"original_level_we_spawned_on": "test.cfg"
+			},
+			"type": "fish_purple",
+			"x": 1585,
+			"y": 121
+		},
+		{
+			"_uuid": "736afbd2302c40a6acdbb58395293846",
+			"current_frame": "hurt",
+			"custom": true,
+			"label": "_671cc205",
+			"property_data": {
+				"_desired_height": 220,
+				"_x2_bound": 1549,
+				"_x_bound": 1149,
+				"original_level_we_spawned_on": "test.cfg"
+			},
+			"type": "fish_purple",
+			"x": 1259,
+			"y": 128
+		},
+		{
+			"_uuid": "bc53191baf294c1fba17b225451b391b",
+			"activation_border": 448,
+			"current_frame": "fly",
+			"custom": true,
+			"label": "_2bccf93f",
+			"property_data": {
+				"_desired_height": 40,
+				"_x2_bound": 2361,
+				"_x_bound": 1913,
+				"original_level_we_spawned_on": "test.cfg"
+			},
+			"type": "moth_brown",
+			"x": 2103,
+			"y": -4
+		},
+		{
+			"_uuid": "0b42cb15d73e427b89b29e5a0c581dda",
+			"activation_border": 448,
+			"current_frame": "fly",
+			"custom": true,
+			"label": "_6043a375",
+			"property_data": {
+				"_desired_height": -19,
+				"_x2_bound": 2363,
+				"_x_bound": 1915,
+				"original_level_we_spawned_on": "test.cfg"
+			},
+			"type": "moth_brown",
+			"x": 2105,
+			"y": -63
+		},
+		{
+			"_uuid": "0bdd51f42118496081a66293bca6cb1d",
+			"activation_border": 448,
+			"current_frame": "fly",
+			"custom": true,
+			"label": "_c8c4b96",
+			"property_data": {
+				"_desired_height": -82,
+				"_x2_bound": 2363,
+				"_x_bound": 1915,
+				"original_level_we_spawned_on": "test.cfg"
+			},
+			"type": "moth_brown",
+			"x": 2105,
+			"y": -126
+		},
+		{
+			"_uuid": "b8560e4134314b1595eb24e7a3af003c",
+			"activation_border": 448,
+			"current_frame": "fly",
+			"custom": true,
+			"label": "_64e614d8",
+			"property_data": {
+				"_desired_height": -144,
+				"_x2_bound": 2361,
+				"_x_bound": 1913,
+				"original_level_we_spawned_on": "test.cfg"
+			},
+			"type": "moth_brown",
+			"x": 2103,
+			"y": -188
 		}
 	],
-	"dimensions": [-544,-1728,4415,575],
+	"dimensions": [-768,-1728,4415,575],
 	"id": "test.cfg",
 	"music": "",
+	"next_level": "test2.cfg",
 	"palettes": ["seaside_sunny"],
 	"preloads": "",
+	"previous_level": "test2.cfg",
 	"segment_height": 0,
 	"segment_width": 0,
 	"serialized_objects": {
@@ -53,16 +200,6 @@
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
-		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
@@ -88,14 +225,14 @@
 ,
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
-,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
-,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
-,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
-,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,,,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,,,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,,,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
+,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
+,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
+,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
+,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
 ,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
 ,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
 ,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk
@@ -137,7 +274,7 @@
 			"zorder": "interior_solid_ground_tiles"
 		},
 		{
-			"tiles": ",
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,bdg,bdg,bdg
 ,
 ,
 ,
@@ -180,7 +317,7 @@
 ,
 ,
 ,",
-			"unique_tiles": "",
+			"unique_tiles": ",bdg",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
@@ -227,37 +364,7 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
 			"zorder": "player"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "mushrooms_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "water_surface"
 		}
 	],
 	"title": "",
@@ -266,11 +373,18 @@
 	},
 	"version": "1.4",
 	"water": {
-		"area": {
-			"color": [0.274509,0.0,0.0,0.196078],
-			"object": "@eval deserialize('33d4e962353c4dffadf1b91069297859')",
-			"rect": [3488,-720,4384,-384]
-		},
+		"area": [
+			{
+				"color": [0.274509,0.0,0.0,0.196078],
+				"object": "@eval deserialize('33d4e962353c4dffadf1b91069297859')",
+				"rect": [3488,-720,4384,-384]
+			},
+			{
+				"color": [0.274509,0.0,0.0,0.196078],
+				"object": "@eval deserialize('e861c890e9d3407ca070e6de4be3dffc')",
+				"rect": [1104,128,1888,384]
+			}
+		],
 		"zorder": 15
 	},
 	"water_resistance": 100,
