--- a/data/objects/enemies/bugs/moth_bomber_bomb.cfg
+++ b/data/objects/enemies/bugs/moth_bomber_bomb.cfg
@@ -51,7 +51,7 @@
 								)",
 	
 	on_die:  "[
-		spawn('explosion_big_harmful',midpoint_x,midpoint_y-32,facing),
+		//spawn('explosion_big_harmful',midpoint_x,midpoint_y-32,facing),
 		play_sound__falloff('BombExplode.wav'),
 		stop_sound('fuse-long.ogg')
 	]",
@@ -63,6 +63,8 @@
 	on_end_danger_anim: "[animation('danger')]",
 
 	on_process: "set(light_circular.scale, sin(cycle*100 + 1d20)/2.0 )", 
+
+on_add_object_fail: "[remove_object(me), debug('add obj fail')]",
 
 	animation: [
 		{
